[package]
name = "released-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
octocrab = "0.38.0"
serde = { version = "1.0.203", features = ["derive"] }
tracing-subscriber = "0.3.18"
uluru = "3.1.0"
dotenvy_macro = "0.15.7"
markdown = "1.0.0-alpha.17"
